Fix modal on iphones

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -127,9 +127,6 @@ h1 {
   padding: 0;
   background-color: #ecf3f8;
   z-index: 1002;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 dialog::backdrop {
@@ -201,6 +198,7 @@ dialog::backdrop {
   overflow: hidden;
   width: 100%;
   inset: 0;
+  touch-action: none;
 }
 
 @media (width >= 768px) and (width < 1440px ) {
